--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "gulp-sass": "^5.0.0",
     "gulp-uglify-es": "^2.0.0",
     "nodemon": "^2.0.12",
-    "sass": "^1.35.2",
-    "supervisor": "^0.12.0"
+    "sass": "^1.35.2"
   }
 }
